Fix overlapping pagination buttons in table-view

--- a/Kartverket.Register/Content/Site.css
+++ b/Kartverket.Register/Content/Site.css
@@ -101,7 +101,10 @@ h4 a.sorted-desc:after {
 .otherformat-buttons{
     min-height: 30px;
     display: block;
-    margin-bottom: 20px;
+}
+
+.search-filter-wrapper {
+    margin-top: 15px;
 }
 
 
